<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2009 OpenIntents.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
        
    <PreferenceCategory
            android:title="@string/preference_sort_settings">
        
        <ListPreference 
                android:key="sortby"
                android:defaultValue="1"
                android:entries="@array/preference_sortby_names"
                android:entryValues="@array/sortby_values"
                android:title="@string/preference_sortby" />
        
        <CheckBoxPreference
                android:title="@string/preference_sortby_ascending"
                android:key="ascending"
                android:summaryOff="@string/preference_sortby_ascending_summary_off"
                android:summaryOn="@string/preference_sortby_ascending_summary_on"
                android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/preference_advanced_features">

        <CheckBoxPreference
                android:key="mediascan"
                android:defaultValue="false"
                android:title="@string/preference_mediascan_title"
                android:summaryOn="@string/preference_mediascan_summary_on"
                android:summaryOff="@string/preference_mediascan_summary_off" />

        <CheckBoxPreference
                android:key="showallwarning"
                android:defaultValue="true"
                android:title="@string/preference_showallwarning_title"
                android:summaryOn="@string/preference_showallwarning_summary_on"
                android:summaryOff="@string/preference_showallwarning_summary_off" />

        <CheckBoxPreference 
                android:key="displayhiddenfiles"
                android:title="@string/preference_displayhiddenfiles_title"
                android:defaultValue="true"
                android:summaryOff="@string/preference_displayhiddenfiles_summary_off"
                android:summaryOn="@string/preference_displayhiddenfiles_summary_on" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/bookmarks">
        <Preference android:key="editbookmarks" android:title="@string/bookmarks_manage"/>
    </PreferenceCategory>
</PreferenceScreen>
    
