<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_bookmarks"
        android:alphabeticShortcut="b"
        android:icon="@drawable/ic_action_bookmarks"
        android:showAsAction="ifRoom"
        android:title="@string/menu_bookmarks">
    </item>
    <item
        android:id="@+id/menu_search"
        android:alphabeticShortcut="s"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:title="@string/menu_search">
    </item>
    <item
        android:id="@+id/menu_create_folder"
        android:alphabeticShortcut="c"
        android:icon="@drawable/ic_action_create_folder"
        android:showAsAction="ifRoom"
        android:title="@string/menu_create_folder">
    </item>
    <item
        android:id="@+id/menu_multiselect"
        android:alphabeticShortcut="m"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_mark"
        android:title="@string/menu_multiselect">
    </item>
    <item
        android:id="@+id/menu_media_scan_include"
        android:alphabeticShortcut="i"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="ifRoom"
        android:title="@string/menu_include_in_media_scan"
        android:visible="false">
    </item>
    <item
        android:id="@+id/menu_media_scan_exclude"
        android:alphabeticShortcut="e"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="ifRoom"
        android:title="@string/menu_exclude_from_media_scan"
        android:visible="false">
    </item>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom"
        android:title="@string/menu_settings">
    </item>

</menu>