<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_multiselect"
        android:alphabeticShortcut="m"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_mark"
        android:title="@string/menu_multiselect" />
    <item
        android:id="@+id/menu_paste"
        android:alphabeticShortcut="p"
        android:icon="@drawable/ic_action_paste"
        app:showAsAction="ifRoom"
        android:menuCategory="container"
        android:orderInCategory="1"
        android:title="@string/menu_paste" />
    <item
        android:id="@+id/menu_create_folder"
        android:alphabeticShortcut="c"
        android:icon="@drawable/ic_action_create_folder"
        app:showAsAction="ifRoom"
        android:menuCategory="container"
        android:orderInCategory="10"
        android:title="@string/menu_create_folder">
    </item>
    <item
        android:id="@+id/menu_media_scan_include"
        android:alphabeticShortcut="i"
        android:icon="@android:drawable/ic_menu_gallery"
        app:showAsAction="ifRoom"
        android:title="@string/menu_include_in_media_scan"
        android:visible="false">
    </item>
    <item
        android:id="@+id/menu_media_scan_exclude"
        android:alphabeticShortcut="e"
        android:icon="@android:drawable/ic_menu_gallery"
        app:showAsAction="ifRoom"
        android:title="@string/menu_exclude_from_media_scan"
        android:visible="false">
    </item>

</menu>